--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ readme = "Readme.md"
 
 [dependencies]
 open-api-matcher = { path = "../open-api-matcher"}
+thiserror = "1.0"
 tokio = { version = "1", features = ["full"] }
 log = "0"
 env_logger = "0"
