--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ env_logger = "0"
 hyper = { version = "0", features = ["full"] }
 uuid = { version = "1", features = ["v4", "fast-rng"] }
 rusqlite = { version = "0", features = ["serde_json", "blob"] }
+r2d2 = { version = "0" }
+r2d2_sqlite = { version = "0" }
 regex = { version = "1" }
 
 [dev-dependencies]
